--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
       <div class="inputContainer">
         <input id="task" name="task" type="text" placeholder="Add your task" />
-        <button onclick="createTask()">Add</button>
+        <button>Add</button>
       </div>
       <div class="list" id="toDoList"></div>
     </div>
