--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite App</title>
-    <script src="/main.js"></script>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
@@ -21,5 +20,6 @@
       </div>
       <div class="list" id="toDoList"></div>
     </div>
+    <script src="main.js"></script>
   </body>
 </html>
